--- a/index.html
+++ b/index.html
@@ -1,15 +1,7 @@
-<p>&lt;!DOCTYPE html&gt;</p>
-
-<p>&lt;html&gt;</p>
-
-<p>&lt;body&gt;</p>
-
-<p>&lt;h1&gt;Hello World&lt;/h1&gt;</p>
-
-<p>&lt;p&gt;I&#39;m hosted with GitHub Pages.&lt;/p&gt;</p>
-
-<p>&lt;/body&gt;</p>
-
-<p>&lt;/html&gt;</p>
-
-
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
